// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Styles/Button (legacy) ExtraSmall smoke-test 1`] = `
<div class="flex flex-col gap-4 max-w-[18.75rem]">
  <button type="button"
          class="ui-btn p-btn-xsmall text-label4"
  >
    Primary button
  </button>
  <button type="button"
          class="ui-btn p-btn-xsmall text-label4"
  >
    <svg class="inline-block ui-btn-icon-xsmall"
         style="width: 1rem; height: 1rem;"
    >
      <use xlink:href="#sprite-icon-gui-magnifying-glass-micro">
      </use>
    </svg>
    Primary button with icon
  </button>
  <button type="button"
          class="ui-btn-alt p-btn-xsmall text-label4"
  >
    Primary button alternative
  </button>
  <button type="button"
          class="ui-btn-secondary p-btn-xsmall text-label4"
  >
    Secondary button
  </button>
</div>
`;

exports[`Styles/Button (legacy) Inverted smoke-test 1`] = `
<div class="flex flex-col gap-4 max-w-[18.75rem]">
  <button type="button"
          class="ui-btn-invert"
  >
    Primary button
  </button>
  <button type="button"
          class="ui-btn-secondary-invert"
  >
    Secondary button
  </button>
  <button type="button"
          class="ui-btn-invert"
          disabled
  >
    Unavailable primary button
  </button>
  <button type="button"
          class="ui-btn-secondary-invert"
          disabled
  >
    Unavailable secondary button
  </button>
</div>
`;

exports[`Styles/Button (legacy) Large smoke-test 1`] = `
<div class="flex flex-col gap-4 max-w-[18.75rem]">
  <button type="button"
          class="ui-btn p-btn-large text-label1"
  >
    Primary button
  </button>
  <button type="button"
          class="ui-btn p-btn-large text-label1"
  >
    <svg class="inline-block ui-btn-icon"
         style="width: 1rem; height: 1rem;"
    >
      <use xlink:href="#sprite-icon-gui-magnifying-glass-micro">
      </use>
    </svg>
    Primary button with icon
  </button>
  <button type="button"
          class="ui-btn-alt p-btn-large text-label1"
  >
    Primary button alternative
  </button>
  <button type="button"
          class="ui-btn-secondary p-btn-large text-label1"
  >
    Secondary button
  </button>
</div>
`;

exports[`Styles/Button (legacy) LinkStyledAsButton smoke-test 1`] = `
<div class="flex flex-col gap-4 max-w-[18.75rem]">
  <a href="#"
     role="button"
     class="ui-btn"
  >
    Link
  </a>
  <a href="#"
     role="button"
     class="ui-btn ui-btn-disabled"
  >
    Disabled link
  </a>
</div>
`;

exports[`Styles/Button (legacy) Small smoke-test 1`] = `
<div class="flex flex-col gap-4 max-w-[18.75rem]">
  <button type="button"
          class="ui-btn p-btn-small text-label3"
  >
    Primary button
  </button>
  <button type="button"
          class="ui-btn p-btn-small text-label3"
  >
    <svg class="inline-block ui-btn-icon-small"
         style="width: 1rem; height: 1rem;"
    >
      <use xlink:href="#sprite-icon-gui-magnifying-glass-micro">
      </use>
    </svg>
    Primary button with icon
  </button>
  <button type="button"
          class="ui-btn-alt p-btn-small text-label3"
  >
    Primary button alternative
  </button>
  <button type="button"
          class="ui-btn-secondary p-btn-small text-label3"
  >
    Secondary button
  </button>
</div>
`;

exports[`Styles/Button (legacy) Standard smoke-test 1`] = `
<div class="flex flex-col gap-4 max-w-[18.75rem]">
  <button type="button"
          class="ui-btn"
  >
    Primary button
  </button>
  <button type="button"
          class="ui-btn-alt"
  >
    Primary button alternative
  </button>
  <button type="button"
          class="ui-btn-secondary"
  >
    Secondary button
  </button>
  <button type="button"
          class="ui-btn"
          disabled
  >
    Unavailable primary button
  </button>
  <button type="button"
          class="ui-btn-alt"
          disabled
  >
    Unavailable primary button alternative
  </button>
  <button type="button"
          class="ui-btn-secondary"
          disabled
  >
    Unavailable secondary button
  </button>
</div>
`;

exports[`Styles/Button (legacy) WithIcons smoke-test 1`] = `
<div class="flex flex-col gap-4 max-w-[18.75rem]">
  <button type="button"
          class="ui-btn"
  >
    <svg class="inline-block ui-btn-icon"
         style="width: 1rem; height: 1rem;"
    >
      <use xlink:href="#sprite-icon-gui-magnifying-glass-micro">
      </use>
    </svg>
    Primary button with icon
  </button>
  <button type="button"
          class="ui-btn-alt"
  >
    <svg class="inline-block ui-btn-icon"
         style="width: 1rem; height: 1rem;"
    >
      <use xlink:href="#sprite-icon-gui-magnifying-glass-micro">
      </use>
    </svg>
    Primary button alternative with icon
  </button>
  <button type="button"
          class="ui-btn-secondary"
  >
    <svg class="inline-block ui-btn-icon"
         style="width: 1rem; height: 1rem;"
    >
      <use xlink:href="#sprite-icon-gui-magnifying-glass-micro">
      </use>
    </svg>
    Secondary button with icon
  </button>
  <button type="button"
          class="ui-btn"
          disabled
  >
    <svg class="inline-block ui-btn-icon"
         style="width: 1rem; height: 1rem;"
    >
      <use xlink:href="#sprite-icon-gui-magnifying-glass-micro">
      </use>
    </svg>
    Unavailable primary button with icon
  </button>
  <button type="button"
          class="ui-btn-alt"
          disabled
  >
    <svg class="inline-block ui-btn-icon"
         style="width: 1rem; height: 1rem;"
    >
      <use xlink:href="#sprite-icon-gui-magnifying-glass-micro">
      </use>
    </svg>
    Unavailable primary button alternative with icon
  </button>
  <button type="button"
          class="ui-btn-secondary"
          disabled
  >
    <svg class="inline-block ui-btn-icon"
         style="width: 1rem; height: 1rem;"
    >
      <use xlink:href="#sprite-icon-gui-magnifying-glass-micro">
      </use>
    </svg>
    Unavailable secondary button with icon
  </button>
</div>
`;
